<resources>
    <string name="app_name">InClass02</string>
    <string name="ticket_hint">Enter Ticket Price</string>
    <string name="ticket_label">Ticket Price:</string>
    <string name="discounted_label">Discounted %:</string>
    <string name="discountedPrice_label">Discounted Price:</string>
    <string name="discount5">5% Discount</string>
    <string name="discount10">10% Discount</string>
    <string name="discount15">15% Discount</string>
    <string name="discount20">20% Discount</string>
    <string name="discount50">50% Discount</string>
    <string name="clearLabel">Clear</string>

</resources>