<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ticketLabel"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/ticket_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDiscountedLabel"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="15dp"
        android:text="@string/discounted_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textDiscounted"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDiscountedPriceLabel"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:text="@string/discountedPrice_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textDiscountedPrice"
        app:layout_constraintTop_toBottomOf="@+id/textDiscountedLabel" />

    <TextView
        android:id="@+id/textDiscounted"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="100dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDiscountedPrice"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDiscounted" />

    <EditText
        android:id="@+id/ticketPriceInput"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/ticket_hint"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/ticketLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/discount5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/gray_600"
        android:backgroundTintMode="add"
        android:text="@string/discount5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>